php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46760 SoapClient doRequest fails when proxy is used
Submitted: 2008-12-05 12:52 UTC Modified: 2009-01-05 22:18 UTC
From: iwan at iwex dot nl Assigned:
Status: Closed Package: SOAP related
PHP Version: 5.2.7 OS: Linux (Unbuntu 8.10)
Private report: No CVE-ID: None
 [2008-12-05 12:52 UTC] iwan at iwex dot nl
Description:
------------
When a proxy is used with the following code. The proxy is not used.

Problem is in that the proxy_port is a string type. When the port is type casted to an int it will work.

Reproduce code:
---------------
$client = new SoapClient(null, array('proxy_host'     => "localhost",
                                            'proxy_port'     => '8080',
                                            'login'    => "user",
									        'password' => "test",
											'uri'            => 'mo:http://www.w3.org/',
											'location'       => 'http://some.url'));

echo $client->__doRequest('<?xml version="1.0" encoding="UTF-8"?>...etc',
'http://some.url',
"add",
'1.2');

Expected result:
----------------
That the proxy will receive the request.

Actual result:
--------------
The call is done without the use of the proxy.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-01-05 22:18 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5_2_9 (synced with 5_3)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 19:00:01 2026 UTC