- Fixed bug #46760 (SoapClient doRequest fails when proxy is used) [only in this branch]